[package]
name = "bluebooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = "0.13.1"
futures = "0.3"
tokio = { version = "1", features = ["net", "io-util"] }
cli-table = "0.4"
itertools = "0.10.3"
prettytable-rs = "0.8.0"
terminal-emoji = "0.4.1"
